# pythonProject

./: Dockerfile  README.md  docker-compose.yml  populate_data.py  pyproject.toml  pythonProject.postman_collection.json  readMe.md  requirements.txt  student.db
app/: crud.py  database.py  main.py  models.py  routes.py  schemas.py
app/routes/: student.py
data/: .my-healthcheck.cnf  aria_log_control  ib_buffer_pool
data/fastapi_db/: grades.frm  grades.ibd  students.frm  students.ibd
data/mysql/: column_stats.MAI  column_stats.frm  columns_priv.MAI  columns_priv.frm  db.MAI  db.frm  event.MAI  event.frm  func.MAI  func.frm  general_log.frm  global_priv.MAD  global_priv.MAI  global_priv.frm  gtid_slave_pos.frm  help_category.MAI  help_category.frm  help_keyword.MAI  help_keyword.frm  help_relation.MAI  help_relation.frm  help_topic.MAI  help_topic.frm  index_stats.MAI  index_stats.frm  innodb_index_stats.frm  innodb_index_stats.ibd  innodb_table_stats.frm  innodb_table_stats.ibd  plugin.MAI  plugin.frm  proc.MAD  proc.MAI  proc.frm  procs_priv.MAI  procs_priv.frm  proxies_priv.MAD  proxies_priv.MAI  proxies_priv.frm  roles_mapping.MAI  (+20 more)
data/sys/: host_summary.frm  host_summary_by_file_io.frm  host_summary_by_file_io_type.frm  host_summary_by_stages.frm  host_summary_by_statement_latency.frm  host_summary_by_statement_type.frm  innodb_buffer_stats_by_schema.frm  innodb_buffer_stats_by_table.frm  innodb_lock_waits.frm  io_by_thread_by_latency.frm  io_global_by_file_by_bytes.frm  io_global_by_file_by_latency.frm  io_global_by_wait_by_bytes.frm  io_global_by_wait_by_latency.frm  latest_file_io.frm  memory_by_host_by_current_bytes.frm  metrics.frm  (+87 more)
tests/: test_main.py
