[tool.poetry]
name = "fastapi-student-grades"
version = "0.1.0"
description = "FastAPI application to manage students and grades"
authors = ["Mouhamadou Soumare <mouhamadou.soumare@eemi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
sqlalchemy = "^2.0.31"
databases = "^0.9.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
